--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest --watchAll --collectCoverage",
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "nodemon --watch ./src/"
+    "dev": "nodemon --watch ./src/",
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo"
   },
   "keywords": [
     "Typescript",
@@ -21,10 +23,16 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "inversify": "^6.0.2",
+    "inversify-express-utils": "^6.4.6",
     "module-alias": "^2.2.3",
+    "mysql2": "^3.9.7",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "^0.10.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
